# ampli-music-fest-registration

./: README.md
backend/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
backend/auth/: auth_routes.py  supabase.py
backend/constants/: settings.py
backend/database/: config.py
backend/middlewares/: auth_middleware.py  validate_authentication.py  validate_token.py
backend/models/: model.py  schema.py
backend/routes/: attendee_router.py  checkin_router.py  retrieve_attendee.py
backend/utils/: format_attendee.py  logger.py  pagination.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BottomNavbar.tsx  Layout.tsx  ProtectRoute.tsx
frontend/src/components/ui/: CheckInCard.tsx
frontend/src/hooks/: useApi.ts  useLogin.ts  useLogout.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: CheckInSuccess.tsx  CheckedInTable.tsx  EventRegistration.tsx  Login.tsx  NotFound.tsx  ParticipantDetails.tsx  QRCodeReader.tsx
