[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.12",
    "lambda-decorators>=0.6.0",
    "mangum>=0.19.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.0",
]
